Add table to my.html

--- a/src/main/webapp/html/my.html
+++ b/src/main/webapp/html/my.html
@@ -6,6 +6,46 @@
 </head>
 <body>
 <h1>RPG admin panel</h1>
+<h2>Account list:</h2>
+<table id="table" border="1">
+    <caption>Account list:</caption>
+    <thead>
+    <tr>
+        <th>#</th>
+        <th>Name</th>
+        <th>Title</th>
+        <th>Race</th>
+        <th>Profession</th>
+        <th>Level</th>
+        <th>Birthday</th>
+        <th>Banned</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    </tbody>
+
+
+</table>
 
 </body>
 </html>
